# ntcl-data

./: Makefile  README.md  build.info
src/modules/: CMakeLists.txt
src/modules/api/: CMakeLists.txt  data_api.f90  data_dev.f90  data_initializer.f90  default_concurrency_factory.F90  default_memory_factory.F90
src/modules/concurrency/: CMakeLists.txt  abstract_concurrency_factory.f90  dependency_manager.f90  event.f90  event_handler.f90  stream.f90  stream_handler.f90
src/modules/concurrency_api/: CMakeLists.txt  concurrency_api.f90
src/modules/construction/: CMakeLists.txt  storage_builder.f90  storage_builder_factory.f90  storage_builder_interface.f90  storage_construction_api.f90
src/modules/converter/: CMakeLists.txt  fortran_converter_factory.f90  fortran_data_converter.f90  fortran_host_converter.f90
src/modules/cuda_base/: cuda_common.h  cuda_data_wrapper.f90  cuda_memory.cu  cuda_memory_interface.F90  cuda_memory_wrapper.f90
src/modules/cuda_concurrency/: cuda_concurrency_impl.cu  cuda_concurrency_interface.f90  cuda_concurrency_plugin.f90  dependency_manager_cuda.f90  event_handler_cuda.f90  stream_handler_cuda.f90
src/modules/cuda_memory/: cuda_builder.f90  cuda_data_dispatcher.f90  cuda_data_manager.f90  cuda_pinned_builder.f90  cuda_pinned_storage.f90  cuda_storage.f90  host_cuda_manager.f90
src/modules/cuda_plugin/: cuda_data_plugin.f90
src/modules/helpers/: CMakeLists.txt  storage_helper.f90
src/modules/hip_base/: devQuery.hip  hip_common.h  hip_data_wrapper.f90  hip_memory.hip  hip_memory_wrapper.f90
src/modules/hip_concurrency/: dependency_manager_hip.f90  event_handler_hip.f90  hip_concurrency_implementation.hip  hip_concurrency_interface.f90  hip_concurrency_plugin.f90  stream_handler_hip.f90
src/modules/hip_memory/: hip_builder.f90  hip_data_manager.f90  hip_pinned_builder.f90  hip_pinned_storage.f90  hip_storage.f90  host_hip_manager.f90
src/modules/hip_plugin/: hip_data_plugin.f90
src/modules/host_concurrency/: CMakeLists.txt  dependency_manager_host.f90  event_handler_host.f90  host_concurrency_plugin.f90  stream_handler_host.f90
src/modules/host_memory/: CMakeLists.txt  host_builder.f90  host_data_manager.f90  host_memory_plugin.f90  host_storage.f90  intrinsic_pointer_builder.f90
src/modules/memory/: CMakeLists.txt  abstract_memory_factory.f90  data_builder.f90  data_manager.f90  data_storage.f90  data_storage_wrapper.f90
src/modules/memory_api/: CMakeLists.txt  memory_api.f90
src/modules/scratch_buffer/: CMakeLists.txt  checkpoint_manager.f90  contiguous_ring_array_descriptor.f90  ring_array_descriptor.f90  ring_buffer.f90  scratch_buffer.f90  scratch_buffer_api.f90  scratch_buffer_builder.f90  slot_manager.f90
src/test/: CMakeLists.txt
src/test/api/: CMakeLists.txt
src/test/concurrency/: CMakeLists.txt  concurrency_package_test.f90  event_test.f90  stream_test.f90  test.info
src/test/concurrency_api/: CMakeLists.txt  concurrency_api_package_test.f90
src/test/construction/: CMakeLists.txt  construction_package_test.f90  storage_builder_factory_test.f90  storage_builder_interface_test.f90  storage_builder_test.f90  storage_builder_test_helper.f90  test.info
src/test/converter/: CMakeLists.txt  converter_package_test.f90  fortran_data_converter_test.f90  fortran_host_converter_test.f90  test.info
src/test/cuda_base/: cuda_base_package_test.f90  cuda_data_wrapper_test.f90  test.info
src/test/cuda_concurrency/: cuda_concurrency_package_test.f90  dependency_manager_cuda_test.f90  event_handler_cuda_test.f90  stream_handler_cuda_test.f90  test.info
src/test/cuda_memory/: cuda_memory_package_test.f90  cuda_pinned_storage_test.f90  cuda_storage_test.f90  host_cuda_manager_test.f90  test.info
src/test/cuda_plugin/: cuda_plugin_package_test.f90
src/test/helpers/: CMakeLists.txt  helpers_package_test.f90  storage_helper_test.f90  test.info
src/test/hip_base/: hip_base_package_test.f90  hip_data_wrapper_test.f90  test.info
src/test/hip_concurrency/: dependency_manager_hip_test.f90  event_handler_hip_test.f90  hip_concurrency_package_test.f90  stream_handler_hip_test.f90  test.info
src/test/hip_memory/: hip_builder_test.f90  hip_memory_package_test.f90  hip_pinned_builder_test.f90  hip_pinned_storage_test.f90  hip_storage_test.f90  host_hip_manager_test.f90  test.info
src/test/hip_plugin/: hip_plugin_package_test.f90
src/test/host_concurrency/: CMakeLists.txt  dependency_manager_host_test.f90  event_handler_host_test.f90  host_concurrency_package_test.f90  stream_handler_host_test.f90  test.info
src/test/host_memory/: CMakeLists.txt  host_builder_test.f90  host_memory_package_test.f90  test.info
src/test/memory/: CMakeLists.txt  memory_package_test.f90
src/test/memory_api/: CMakeLists.txt  memory_api_package_test.f90
src/test/scratch_buffer/: CMakeLists.txt  checkpoint_manager_test.f90  contiguous_ring_array_descriptor_test.f90  ring_array_descriptor_test.f90  ring_buffer_test.f90  scratch_buffer_package_test.f90  scratch_buffer_test.f90  slot_manager_test.f90  test.info
src/test/unittest/: CMakeLists.txt  unittest.F90
