add_subdirectory(concurrency)
add_subdirectory(concurrency_api)
add_subdirectory(construction)
add_subdirectory(converter)
add_subdirectory(helpers)
add_subdirectory(host_concurrency)
add_subdirectory(host_memory)
add_subdirectory(memory)
add_subdirectory(memory_api)
add_subdirectory(scratch_buffer)
