add_library(
    ntcl_data_host_concurrency_test
    host_concurrency_package_test.f90
    dependency_manager_host_test.f90
    event_handler_host_test.f90
    stream_handler_host_test.f90
)
add_library(ntcl_util::host_concurrency_test ALIAS ntcl_data_host_concurrency_test)
target_include_directories(
    ntcl_data_host_concurrency_test
    PUBLIC
    ${CMAKE_CURRENT_BINARY_DIR}
)
target_link_libraries(
    ntcl_data_host_concurrency_test
    PUBLIC
    ntcl_util::api
    ntcl_data_host_concurrency
    ntcl_data_concurrency
)
